skeplib/tests/fixtures/parser/invalid/missing_semicolon_let.sk
fn main() -> Int {
  let x = 1
  return 0;
}
